# proof-wala

./: .gitignore  .gitmodules  README.md  hard_test.out  opam_script.sh  per_node_job.sh  pullfromfoundry.sh  pyproject.toml  requirements.txt  tacc_requirements.txt  tacc_slurm.sh
.github/workflows/: ci.yaml  github-enforce-main-to-release.yaml  publish.yaml
src/data_gen/: data_gen.py
src/llm_helpers/: llama_loader.py  model.py
src/proof_wala/itp/: codet5_training_data_formatter.py  copra_training_data_formatter.py  proof_model_training_data_formatter.py  training_data_formatter.py
src/proof_wala/llm_helpers/: comet_helper.py  custom_s2s_trainer.py  huggingface_model_map.py  llama_chatbot.py  model.py  tgi_model.py  tgi_server.py
src/proof_wala/main/: config.py  eval_config.py  init_ray.py  run.py  run_inferences.py  run_proof_search.py  run_token_count.py  run_training.py
src/proof_wala/parsers/: proof_model_grammars.py
src/proof_wala/proof_search/: llm_tactic_generator.py  search_driver.py  test_search_driver.py
src/proof_wala/scripts/: install_thrall.sh  setup.sh  setup_training.sh  update_imports.sh
src/proof_wala/search/: beam_search.py  best_first_search.py  search.py  test.py
src/proof_wala/tools/: ray_utils.py
src/scripts/: setup.sh  update_imports.sh
src/tests/: run_proof_search_test.py  setup_test.py
src/thrall_lib/itp/: codet5_training_data_formatter.py  copra_training_data_formatter.py  proof_model_training_data_formatter.py  training_data_formatter.py
src/thrall_lib/llm_helpers/: codet5_chat_format.py  cuda_context.py  custom_s2s_trainer.py  custom_sft_trainer.py  huggingface_model_map.py  llama2_chat_format.py  llama_chatbot.py  model.py  theorem_proving_training_dataset.py
src/thrall_lib/main/: config.py  eval_config.py  run.py  run_inferences.py  run_proof_search.py  run_token_count.py  run_training.py
src/thrall_lib/parsers/: copra_grammars.py  prompt_template_parsers.py  proof_model_grammars.py
src/thrall_lib/proof_search/: llm_tactic_generator.py  search_driver.py  test_search_driver.py
src/thrall_lib/proof_search_policy/: search_policy.py
src/thrall_lib/scripts/: install_thrall.sh  setup.sh  setup_training.sh  update_imports.sh
src/thrall_lib/search/: beam_search.py  best_first_search.py  search.py  test.py
(+194 files in other folders)
