[build-system]
requires = [
    "hatchling"
]
build-backend = "hatchling.build"
[project]
name = "proof-wala"
version = "1.1.4"
authors = [
  { name="Amitayush Thakur", email="amitayush@utexas.edu" },
]
description = "Python library for training LLMs with Interactive Theorem Proving data."
readme = "README.md"
requires-python = ">=3.9, <3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "itp-interface==1.1.4",
    "filelock==3.12.4",
    "accelerate==1.3.0",
    "bitsandbytes==0.41.1",
    "gradio==3.48.0",
    "protobuf==3.20.1",
    "scipy==1.11.2",
    "sentencepiece==0.1.99",
    "spaces==0.16.1",
    "transformers==4.48.0",
    "peft==0.7.1",
    "trl==0.14.0",
    "parglare==0.16.1",
    "pydantic==1.10.13",
    "graphviz==0.17",
    "comet-ml==3.33.9"
]

[project.urls]
Homepage = "https://github.com/trishullab/proof-wala"
Issues = "https://github.com/trishullab/proof-wala/issues"

[project.scripts]
proof-wala-init-ray = "proof_wala.main.init_ray:main"
proof-wala-search = "proof_wala.main.run_proof_search:run_proof_search"
proof-wala-train = "proof_wala.main.run:run"
